<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ordenar_cves_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/fondo_radio_group">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ordenar_por"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/fechaRec_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fecahRec_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/ordenarFecha_Rec" />

        <ImageView
            android:id="@+id/fechaRec_iv"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="end"
            android:src="@drawable/check"
            android:visibility="gone"
            app:tint="@color/primary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fechaAnt_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/fechaAnt_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/ordenarFecha_Ant" />

        <ImageView
            android:id="@+id/fechaAnt_iv"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="end"
            android:src="@drawable/check"
            android:visibility="gone"
            app:tint="@color/primary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gravedadAsc_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/gravedadAsc_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/ordenarGravedad_Asc" />

        <ImageView
            android:id="@+id/gravedadAsc_iv"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="end"
            android:src="@drawable/check"
            android:visibility="gone"
            app:tint="@color/primary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gravedadDesc_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/gravedadDesc_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/ordenarGravedad_Desc" />

        <ImageView
            android:id="@+id/gravedadDesc_iv"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="end"
            android:src="@drawable/check"
            android:visibility="gone"
            app:tint="@color/primary"/>

    </LinearLayout>

</LinearLayout>
