<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/severityIcon_iv"
                style="@style/RecyclerIconStyle"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="6dp"
                android:src="@drawable/circle" />

            <TextView
                android:id="@+id/cveId_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="CVE ID" />

        </LinearLayout>

        <TextView
            android:id="@+id/descricion_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            tools:text="Descripcion" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="22dp"
            android:paddingBottom="22dp">

            <TextView
                android:id="@+id/gravedadTitle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:text="@string/cve_baseScore_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/baseScore_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="6.1" />

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/baseScore_hbc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gravedadTitle_tv" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="16dp"
                        android:paddingTop="16dp"
                        android:text="@string/cve_impacto_title"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/infoImpacto_iv"
                        style="@style/RecyclerIconStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:paddingTop="16dp"
                        android:src="@drawable/info_24" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="22dp">

                    <TextView
                        android:id="@+id/confidencialidadTitle_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="16dp"
                        android:text="@string/cve_confidencialidad_title"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/confidencialidad_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="PARTIAL" />

                    <com.github.mikephil.charting.charts.HorizontalBarChart
                        android:id="@+id/confidencialidad_hbc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/confidencialidadTitle_tv" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="22dp">

                    <TextView
                        android:id="@+id/integridadTitle_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="16dp"
                        android:text="@string/cve_integridad_title"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/integridad_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="LOW" />

                    <com.github.mikephil.charting.charts.HorizontalBarChart
                        android:id="@+id/integridad_hbc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/integridadTitle_tv" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="22dp">

                    <TextView
                        android:id="@+id/disponibilidadTitle_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="16dp"
                        android:text="@string/cve_disponibilidad_title"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/disponibilidad_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="HIGH" />

                    <com.github.mikephil.charting.charts.HorizontalBarChart
                        android:id="@+id/disponibilidad_hbc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/disponibilidadTitle_tv" />
                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
